Fixed search bar format, now looks better on smaller screens

--- a/nfl_scores/static/nfl_scores/main.css
+++ b/nfl_scores/static/nfl_scores/main.css
@@ -66,7 +66,7 @@ h4 {
 }
 
 #search-query {
-	width: 15%;
+	width: 10em;
 }
 
 .game input {
